✨ Définition d'une hauteur fixe sur la partie commentaire avec une scrollbar personnalisée

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -37,6 +37,30 @@
   background: #9ca3af;
 }
 
+/*
+  Custom scrollbar pour les commentaires
+ */
+.comment-list::-webkit-scrollbar {
+  width: 8px;
+}
+
+.comment-list::-webkit-scrollbar-track {
+background: transparent;
+}
+
+.comment-list::-webkit-scrollbar-thumb {
+  background: transparent;
+  border-radius: 3px;
+}
+
+.comment-list:hover::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.comment-list:hover::-webkit-scrollbar-thumb {
+  background: #d1d5db;
+}
+
 /* CKEditor */
 .ck-content > blockquote,
 .ck-content > dl,
